fixed missaligned subtitle

--- a/css/styles.css
+++ b/css/styles.css
@@ -532,7 +532,7 @@ a:active {
 
   .welcome #subtitle {
     font-size: 1.25em;
-    letter-spacing: 11px;
+    letter-spacing: 10.95px;
     text-indent: .55em;
     margin-top: -1.5em;
   }
